<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="@string/b_nev_trending"
        app:showAsAction="always|withText" />

    <item
        android:id="@+id/navigation_subs"
        android:icon="@drawable/ic_subscriptions_black_24dp"
        android:title="@string/b_nav_subscriptions"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/b_nav_activity"
        app:showAsAction="always|withText" />
    <item
        android:id="@+id/navigation_lib"
        android:icon="@drawable/ic_folder_black_24dp"
        android:title="@string/b_nav_library"
        app:showAsAction="always|withText" />

</menu>
